# customer-orders

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 01_create_orders.sql
src/: db.rs  errors.rs  handlers.rs  in_memory_repo.rs  lib.rs  main.rs  models.rs  repository.rs
tests/: api_tests.rs
