[package]
name = "customer-orders"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "postgres",          # enables PgPool, PgConnection, etc
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "migrate"
] }

dotenv = "0.15"
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
once_cell = "1.20"

[dev-dependencies]
actix-rt = "2"
actix-web = "4.12"
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
